# causal-ai

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
causal_ai/: __init__.py  __main__.py  data_collector.py  main.py
causal_ai/utils/: __init__.py  loaders.py  merge_csv.py  visualise.py
docs/: tutorial_api.ipynb  tutorial_cli.ipynb
examples/: __init__.py
examples/action_dann/: README.md  __init__.py  action_dann_data_collector.py  merge_results.py  submit_action_jobs.sh  submit_action_jobs_bede.sh  submit_action_jobs_stanage.sh
examples/action_dann/data/bede/: dag.dot
examples/action_dann/utils/: download_frames.sh  download_frames_bede.sh  utils.py
examples/digits_dann/: __init__.py  collect_data.py  digits_dann_data_collector.py  merge_data.py
modulefiles/causal_ai/: 0.1.0  0.1.0.lua
scripts/: install_bede.sh
tests/: conftest.py  test_cli.py  test_data_collector.py  test_loaders.py  test_main.py  test_merge_csv.py  test_visualise.py
